--- a/frontend/src/pages/Login.module.css
+++ b/frontend/src/pages/Login.module.css
@@ -47,7 +47,7 @@ a {
   margin: 15px 0;
 }
 
-button {
+.button {
   border-radius: 20px;
   border: 1px solid #FF4B2B;
   background-color: #FF4B2B;
@@ -68,12 +68,12 @@ button:focus {
   outline: none;
 }
 
-button.ghost {
+.ghost {
   background-color: transparent;
   border-color: #FFFFFF;
 }
 
-form {
+.form {
   background-color: #FFFFFF;
   display: flex;
   align-items: center;
@@ -84,7 +84,7 @@ form {
   text-align: center;
 }
 
-input {
+.input {
   background-color: #eee;
   border: none;
   padding: 12px 15px;
@@ -105,21 +105,27 @@ input {
   display:flex;
 }
 
-.form-container {
+.form_container {
   position: absolute;
   top: 0;
   height: 100%;
   transition: all 0.6s ease-in-out;
 }
 
-.sign-in-container {
+.sign_in_container {
   left: 0;
   width: 50%;
+  opacity: 1;
   z-index: 2;
+
+  
 }
 
-.container.right-panel-active .sign-in-container {
+
+
+.container.right_panel_active .sign_in_container {
   transform: translateX(100%);
+  opacity: 0;
 }
 
 .sign-up-container {
@@ -129,26 +135,29 @@ input {
   z-index: 1;
 }
 
-.container.right-panel-active .sign-up-container {
-  transform: translateX(100%);
+.container.right_panel_active .sign_up_container {
+  transform: translateX(120%);
   opacity: 1;
   z-index: 5;
   animation: show 0.6s;
 }
 
 @keyframes show {
-  0%, 49.99% {
-    opacity: 0;
+  0%, 50% {
+    opacity: 1;
     z-index: 1;
   }
   
-  50%, 100% {
+  50.01%, 100% {
     opacity: 1;
     z-index: 5;
   }
 }
 
-.overlay-container {
+
+
+
+.overlay_container {
   position: absolute;
   top: 0;
   left: 50%;
@@ -159,7 +168,7 @@ input {
   z-index: 100;
 }
 
-.container.right-panel-active .overlay-container{
+.container.right_panel_active .overlay_container{
   transform: translateX(-100%);
 }
 
@@ -175,15 +184,15 @@ input {
   left: -100%;
   height: 100%;
   width: 200%;
-    transform: translateX(0);
+  transform: translateX(0);
   transition: transform 0.6s ease-in-out;
 }
 
-.container.right-panel-active .overlay {
+.container.right_panel_active .overlay {
     transform: translateX(50%);
 }
 
-.overlay-panel {
+.overlay_panel {
   position: absolute;
   display: flex;
   align-items: center;
@@ -198,28 +207,29 @@ input {
   transition: transform 0.6s ease-in-out;
 }
 
-.overlay-left {
+.overlay_left {
   transform: translateX(-20%);
 }
 
-.container.right-panel-active .overlay-left {
+.container.right_panel_active .overlay_left {
   transform: translateX(0);
 }
 
-.overlay-right {
+
+.overlay_right {
   right: 0;
   transform: translateX(0);
 }
 
-.container.right-panel-active .overlay-right {
+.container.right_panel_active .overlay_right {
   transform: translateX(20%);
 }
 
-.social-container {
+.social_container {
   margin: 20px 0;
 }
 
-.social-container a {
+.social_container a {
   border: 1px solid #DDDDDD;
   border-radius: 50%;
   display: inline-flex;
