--- a/frontend/src/components/Feed/Feed.module.css
+++ b/frontend/src/components/Feed/Feed.module.css
@@ -103,5 +103,9 @@
 }
 
 .moreViewBtn{
+    background-color:transparent;
+    background-image: none !important;
+    border-color: transparent;
+    border: none;
     color: gray;
 }
