--- a/frontend/src/components/Navbar/Navbar.module.css
+++ b/frontend/src/components/Navbar/Navbar.module.css
@@ -3,13 +3,14 @@
     display:flex;
     position: absolute;
     z-index: 3;
+    height: 100%;
     margin-right: 10%;
 }
 
 .Navbar{
     background: rgb(233, 225, 225);
     color: #fff;
-    height: 100vh;
+
     width: 200px;
     transition: all 0.5s;
     
