--- a/frontend/src/components/Feed/Feed.module.css
+++ b/frontend/src/components/Feed/Feed.module.css
@@ -19,7 +19,7 @@
     text-align: center;
     margin-left: 15%;
     margin-right: 15%;
-    border-bottom: 2pt groove rgb(179, 179, 179);
+    
 }
 
 
@@ -100,6 +100,14 @@
     margin-top: 5px;
     margin-bottom: 5px;
     text-align: left;
+
+}
+
+.content_comment{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    text-align: left;
+    border-bottom: 2pt groove rgb(179, 179, 179);
 }
 
 .tpBtn{
