디테일 페이지 + 댓글 + 좋아요 버그 수정

--- a/frontend/src/components/Profile/Profile.module.css
+++ b/frontend/src/components/Profile/Profile.module.css
@@ -1,14 +1,15 @@
 
 .container{
-    float: right;
-    position: relative;
+    position: fixed;
+    left: 85%;
+    bottom: 0;
     z-index: 3;
-    height: 1000px;
+    height: 100%;
     border: 2pt groove #000000;
 }
 
 
 .container_form{
-    height: 1000px;
+    height: 100%;
     background-color: white;
 }
