--- a/frontend/src/components/Feed/Detail.module.css
+++ b/frontend/src/components/Feed/Detail.module.css
@@ -1,4 +1,3 @@
-
 .modal_background {
     top:0;
     left:0;
@@ -52,6 +51,7 @@
 }
 
 .span{
+    padding-left: 5px;
     text-align: left;
     font-size: 14px;
 }
@@ -66,4 +66,43 @@
     margin-top: 10px;
     padding-top: 10px;
     border-top: 1pt groove white;
+
+}
+
+.comment_li{
+    margin-top: 10px;
+    list-style: none;
+}
+
+.comment_span {
+    text-align: left;
+    font-size: 14px;
+    padding-right: 4px;
+    
+}
+
+.comment_container{
+    position: absolute;
+    bottom: 0;
+    width: 33%;
+
+    border-top: 1pt groove white;
+}
+
+.comment_btn{
+    margin-top: 5px;
+    color: blue;
+    font-size: 14px;
+    float: right;
+    border: none;
+    font-weight: bold;
+    background: transparent; 
+}
+
+.comment_input{
+    width: 85%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border:none;
+    background: transparent; 
 }
