--- a/frontend/src/components/Navbar/Navbar.module.css
+++ b/frontend/src/components/Navbar/Navbar.module.css
@@ -1,6 +1,9 @@
 
 .container{
-    display:flex;
+    display: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
     position: absolute;
     z-index: 3;
     height: 100%;
@@ -10,8 +13,9 @@
 .Navbar{
     background: rgb(233, 225, 225);
     color: #fff;
-
+    
     width: 200px;
+    height: 100%;
     transition: all 0.5s;
     
     
