--- a/frontend/src/components/Feed/Feed.module.css
+++ b/frontend/src/components/Feed/Feed.module.css
@@ -22,12 +22,25 @@
 }
 
 
-.photo {
-    
-    width: 400px;
-    height: 500px;
-    object-fit: cover;
+.img_container{
+    margin-left: 15px;
+    position: relative;
+    width: 100%;
+    height: 70vh;
+    overflow: hidden;
+    background-size: contain;
 
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+.photo {
+
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
 }
 
 
@@ -81,6 +94,7 @@
     -webkit-user-select: none;
     user-select: none;
     vertical-align: top;
+
 }
 .box{
     cursor: pointer;
@@ -111,9 +125,9 @@
 
 .content_comment{
     margin-top: 5px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     text-align: left;
-    border-bottom: 2pt groove rgb(179, 179, 179);
+    border-bottom: 1pt groove rgb(179, 179, 179);
 }
 
 .tpBtn{
