--- a/frontend/src/pages/Info.module.css
+++ b/frontend/src/pages/Info.module.css
@@ -35,11 +35,33 @@
     margin-top: 50px;
     padding-top: 20px;
     border-top: 1pt groove white;
+    
+    
+}
+
+.list_container{
+    margin: 15px;
+    position: relative;
+    width: 90%;
+    height: 30vh;
+    line-height: 30vh;
+    overflow: hidden;
+    background-size: contain;
+    box-shadow: 3px 3px 10px gray;
+    text-align: center;
+    display: inline-block;
+    cursor: pointer;
+
+    
 }
 .boardImg {
-    padding: 10px;
-    width: 100%;
-    cursor: pointer;
+
+    max-width: 100%;
+    max-height: 100%;
+    position: relative;
+    object-fit: cover;
+    overflow: hidden;
+    vertical-align: middle;
 }
 
 .span{
