--- a/frontend/src/components/Profile/Profile.module.css
+++ b/frontend/src/components/Profile/Profile.module.css
@@ -5,7 +5,7 @@
 
 .container{
     position: fixed;
-    left: 85%;
+    left: 80%;
     right: 0;
     bottom: 0;
     text-align: left;
@@ -25,6 +25,11 @@
     display: inline-block;
 }
 
+.intro_container{
+    display: flex;
+    margin-top: 20px;
+}
+
 .profileImg{
     cursor: pointer;
     width: 100%;
@@ -42,6 +47,7 @@
 }
 
 .span{
+    padding-left: 10px;
     text-align: left;
     font-size: 14px;
 }
@@ -53,15 +59,22 @@
     bottom: 8px;
 }
 
-.email_span{
+.span_email{
     padding-left: 10px;
     text-align: left;
     font-size: 13px;
+}
+
+.span_intro{
+    text-align: left;
+    font-size: 13px;
+    word-break: keep-all;
 }
 .bold{
     font-weight: bold;
 }
 .gray{
-    padding-left: 10px;
+
     color: gray;
 }
+
