소개 문구 추가 및 오류 수정 + 로그 지우기 + 폰트 적용

--- a/frontend/src/components/Feed/Feed.module.css
+++ b/frontend/src/components/Feed/Feed.module.css
@@ -1,6 +1,5 @@
 * {
     box-sizing: border-box;
-    font-family: 'helvetica neue', 'Apple SD Gothic Neo', Roboto, Helvetica, Arial, sans-serif;
 }
 
 .container {
@@ -106,6 +105,7 @@
     border: 2pt groove #000000;
     display: inline-block;
     vertical-align: middle;
+    margin-right: 5px;
 }
 .profileImg{
     
