--- a/frontend/src/pages/Info.module.css
+++ b/frontend/src/pages/Info.module.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'NanumNeo'
+}
+
 .profile_container { 
     position: relative;
     margin-left: 390px;
@@ -5,7 +9,9 @@
     height: 100%;
 }
 
-.info_container { 
+.info_container {
+    margin-bottom:50px;
+
     position: relative;
     display: inline-block;  
 }
@@ -26,7 +32,7 @@
     margin-right: 50px;
     border: 2pt groove #000000;
     display: inline-block;
-    vertical-align: middle;
+    vertical-align: bottom;
 }
 
 .board_container {
@@ -37,6 +43,11 @@
     border-top: 1pt groove white;
     
     
+}
+
+.intro_container {
+
+    margin-top: 20px;
 }
 
 .list_container{
@@ -65,6 +76,12 @@
 }
 
 .span{
+    font-size: 14px;
+}
+
+.span_empty{
+    margin-left: 45%;
+    text-align: center;
     font-size: 14px;
 }
 
