--- a/frontend/src/pages/Search.module.css
+++ b/frontend/src/pages/Search.module.css
@@ -74,9 +74,15 @@
 
 .span_nickname{
     font-size: 14px;
+    font-weight: bold;
+}
+
+.span_intro{
+    margin-left: 15px;
+    font-size: 11px;
 }
 .span_success{
-margin-left: 20px;   
+    margin-left: 20px;   
 }
 
 .profileImg {
@@ -94,7 +100,7 @@ margin-left: 20px;
     height: 80px; 
     border-radius: 70%;
     overflow: hidden;
-    margin-right: 50px;
+    margin-right: 30px;
     border: 2pt groove #000000;
     display: inline-block;
     vertical-align: middle;
